--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "chart.js": "^4.4.0",
     "faker": "^6.6.6",
     "phosphor-react": "^1.4.1",
+    "primereact": "^10.3.1",
     "react": "^18.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
