--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.19",
+    "@mui/x-date-pickers": "^7.0.0",
+    "@mui/x-date-pickers-pro": "^7.0.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
     "chart.js": "^4.4.0",
+    "dayjs": "^1.11.10",
     "faker": "^6.6.6",
     "phosphor-react": "^1.4.1",
     "primereact": "^10.3.1",
