--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.14.19",
     "@mui/x-date-pickers": "^7.0.0",
     "@mui/x-date-pickers-pro": "^7.0.0",
