--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.0",
     "dayjs": "^1.11.10",
     "faker": "^6.6.6",
+    "firebase": "^10.11.1",
     "phosphor-react": "^1.4.1",
     "primereact": "^10.3.1",
     "react": "^18.0.0",
