--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.0",
     "dayjs": "^1.11.10",
     "faker": "^6.6.6",
+    "file-saver": "^2.0.5",
     "firebase": "^10.11.1",
     "phosphor-react": "^1.4.1",
     "primereact": "^10.3.1",
@@ -29,7 +30,8 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
